--- a/lib/loom_web/templates/layout/root.html.heex
+++ b/lib/loom_web/templates/layout/root.html.heex
@@ -8,23 +8,40 @@
     <%= live_title_tag assigns[:page_title] || "Loom", suffix: " · Phoenix Framework" %>
     <link phx-track-static rel="stylesheet" href={Routes.static_path(@conn, "/assets/app.css")}/>
     <script defer phx-track-static type="text/javascript" src={Routes.static_path(@conn, "/assets/app.js")}></script>
+
+    <!-- UIkit CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.15.10/dist/css/uikit.min.css" />
+
+    <!-- UIkit JS -->
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.10/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.10/dist/js/uikit-icons.min.js"></script>
   </head>
   <body>
-    <header>
-      <section class="container">
-        <nav>
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-            <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
-              <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
+    <header class="uk-container">
+      <nav uk-navbar class="uk-navbar-container">
+        <div class="uk-navbar-left">
+          <%= link "Loom", to: Routes.page_path(@conn, :index), class: "uk-logo" %>
+
+        </div>
+        <div class="uk-navbar-right">
+          <ul class="uk-navbar-nav">
+            <%= if @current_user do %>
+              <li>
+                <a href="#"><%= @current_user.email %></a>
+                <div class="uk-navbar-dropdown">
+                  <ul class="uk-nav uk-navbar-dropdown-nav">
+                    <li><%= link "Settings", to: Routes.user_settings_path(@conn, :edit) %></li>
+                    <li><%= link "Log out", to: Routes.user_session_path(@conn, :delete), method: :delete %></li>
+                  </ul>
+                </div>
+              </li>
+            <% else %>
+              <li><%= link "Register", to: Routes.user_registration_path(@conn, :new) %></li>
+              <li><%= link "Log in", to: Routes.user_session_path(@conn, :new) %></li>
             <% end %>
           </ul>
-          <%= render "_user_menu.html", assigns %>
-        </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src={Routes.static_path(@conn, "/images/phoenix.png")} alt="Phoenix Framework Logo"/>
-        </a>
-      </section>
+        </div>
+      </nav>
     </header>
     <%= @inner_content %>
   </body>
