--- a/lib/loom_web/templates/token/edit.html.heex
+++ b/lib/loom_web/templates/token/edit.html.heex
@@ -1,5 +1,5 @@
 <h1>Edit Token</h1>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.token_path(@conn, :update, @token)) %>
+<%= render "form.html", Map.put(assigns, :action, Routes.team_token_path(@conn, :update, @team, @token)) %>
 
-<span><%= link "Back", to: Routes.token_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.team_token_path(@conn, :index, @team) %></span>
