--- a/lib/loom_web/templates/token/show.html.heex
+++ b/lib/loom_web/templates/token/show.html.heex
@@ -4,5 +4,5 @@
 
 </ul>
 
-<span><%= link "Edit", to: Routes.token_path(@conn, :edit, @token) %></span> |
-<span><%= link "Back", to: Routes.token_path(@conn, :index) %></span>
+<span><%= link "Edit", to: Routes.team_token_path(@conn, :edit, @team, @token) %></span> |
+<span><%= link "Back", to: Routes.team_token_path(@conn, :index, @team) %></span>
