--- a/lib/loom_web/templates/team/form.html.heex
+++ b/lib/loom_web/templates/team/form.html.heex
@@ -1,15 +1,17 @@
-<.form let={f} for={@changeset} action={@action}>
+<.form let={f} for={@changeset} action={@action} class="uk-form-stacked">
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
   <% end %>
 
-  <%= label f, :name %>
-  <%= text_input f, :name %>
+  <div class="uk-margin">
+  <%= label f, :name, class: "uk-form-label" %>
+  <%= text_input f, :name, class: "uk-form-controls uk-input" %>
   <%= error_tag f, :name %>
+  </div>
 
-  <div>
-    <%= submit "Save" %>
+  <div class="uk-margin">
+    <%= submit "Save", class: "uk-button uk-button-primary" %>
   </div>
 </.form>
