--- a/lib/loom_web/templates/user_registration/new.html.heex
+++ b/lib/loom_web/templates/user_registration/new.html.heex
@@ -1,22 +1,26 @@
 <h1>Register</h1>
 
-<.form let={f} for={@changeset} action={Routes.user_registration_path(@conn, :create)}>
+<.form let={f} for={@changeset} action={Routes.user_registration_path(@conn, :create)} class="uk-form-stacked">
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
   <% end %>
 
-  <%= label f, :email %>
-  <%= email_input f, :email, required: true %>
+  <div class="uk-margin">
+  <%= label f, :email, class: "uk-form-label" %>
+  <%= email_input f, :email, required: true, class: "uk-form-controls uk-input" %>
   <%= error_tag f, :email %>
+  </div>
 
-  <%= label f, :password %>
-  <%= password_input f, :password, required: true %>
+  <div class="uk-margin">
+  <%= label f, :password, class: "uk-form-label" %>
+  <%= password_input f, :password, required: true, class: "uk-form-controls uk-input" %>
   <%= error_tag f, :password %>
+  </div>
 
-  <div>
-    <%= submit "Register" %>
+  <div class="uk-margin">
+    <%= submit "Register", class: "uk-button uk-button-primary" %>
   </div>
 </.form>
 
