--- a/lib/loom_web/templates/user_session/new.html.heex
+++ b/lib/loom_web/templates/user_session/new.html.heex
@@ -1,23 +1,30 @@
 <h1>Log in</h1>
 
-<.form let={f} for={@conn} action={Routes.user_session_path(@conn, :create)} as={:user}>
+<.form let={f} for={@conn} action={Routes.user_session_path(@conn, :create)} as={:user} class="uk-form-stacked">
   <%= if @error_message do %>
     <div class="alert alert-danger">
       <p><%= @error_message %></p>
     </div>
   <% end %>
 
-  <%= label f, :email %>
-  <%= email_input f, :email, required: true %>
+  <div class="uk-margin">
+  <%= label f, :email, class: "uk-form-label" %>
+  <%= email_input f, :email, required: true, class: "uk-input uk-form-controls" %>
+  </div>
 
-  <%= label f, :password %>
-  <%= password_input f, :password, required: true %>
 
-  <%= label f, :remember_me, "Keep me logged in for 60 days" %>
-  <%= checkbox f, :remember_me %>
+  <div class="uk-margin">
+  <%= label f, :password, class: "uk-form-label" %>
+  <%= password_input f, :password, required: true, class: "uk-input uk-form-controls" %>
+  </div>
 
-  <div>
-    <%= submit "Log in" %>
+  <div class="uk-margin">
+  <%= label f, :remember_me, "Keep me logged in for 60 days", class: "uk-form-label" %>
+  <%= checkbox f, :remember_me, class: "uk_checkbox uk-form-controls"  %>
+  </div>
+
+  <div class="uk-margin">
+    <%= submit "Log in", class: "uk-button uk-button-primary" %>
   </div>
 </.form>
 
