--- a/lib/loom_web/templates/event/show.html.heex
+++ b/lib/loom_web/templates/event/show.html.heex
@@ -1,36 +1,36 @@
-<h1 class="uk-text-large">Event <%= @source.source %> / <%= @event.id %></h1>
+<h1 class="uk-text-large"><%= gettext "Event %{source} / %{id}", source: @source.source, id: @event.id %></h1>
 
 <table class="uk-table uk-table-small">
   <tbody>
     <tr>
-      <th>type</th>
+      <th><%= gettext "type" %></th>
       <td><%= @event.type %></td>
     </tr>
     <tr>
-      <th>time</th>
-      <td><%= @event.time %></td>
+      <th><%= gettext "time" %></th>
+      <td><%= Loom.Cldr.DateTime.to_string! @event.time %></td>
     </tr>
     <tr>
-      <th>subject</th>
+      <th><%= gettext "subject" %></th>
       <td><%= @event.subject %></td>
     </tr>
     <tr>
-      <th>datacontenttype</th>
+      <th><%= gettext "data content type" %></th>
       <td><%= @event.datacontenttype %></td>
     </tr>
     <tr>
-      <th>dataschema</th>
+      <th><%= gettext "data schema" %></th>
       <td><%= @event.dataschema %></td>
     </tr>
     <tr>
-      <th>data</th>
+      <th><%= gettext "data" %></th>
       <td><%= data_size(@event.data) %></td>
     </tr>
   </tbody>
 </table>
 
 
-<h2 class="uk-text-large">CloudEvents JSON</h2>
+<h2 class="uk-text-large"><%= gettext "CloudEvents JSON" %></h2>
 
 <pre>
 <%= render(LoomWeb.EventView, "event.json", event: @event) |> Jason.encode!() %>
