--- a/lib/loom_web/templates/user_settings/edit.html.heex
+++ b/lib/loom_web/templates/user_settings/edit.html.heex
@@ -2,52 +2,62 @@
 
 <h3>Change email</h3>
 
-<.form let={f} for={@email_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_email">
+<.form let={f} for={@email_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_email" class="uk-form-stacked">
   <%= if @email_changeset.action do %>
-    <div class="alert alert-danger">
+    <div class="uk-alert-danger" uk-alert>
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
   <% end %>
 
   <%= hidden_input f, :action, name: "action", value: "update_email" %>
 
-  <%= label f, :email %>
-  <%= email_input f, :email, required: true %>
-  <%= error_tag f, :email %>
+  <div class="uk-margin">
+    <%= label f, :email, class: "uk-form-label" %>
+    <%= email_input f, :email, required: true, class: "uk-form-controls uk-input"%>
+    <%= error_tag f, :email %>
+  </div>
 
-  <%= label f, :current_password, for: "current_password_for_email" %>
-  <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_email" %>
-  <%= error_tag f, :current_password %>
+  <div class="uk-margin">
+    <%= label f, :current_password, for: "current_password_for_email" , class: "uk-form-label" %>
+    <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_email", class: "uk-form-controls uk-input" %>
+    <%= error_tag f, :current_password %>
+  </div>
 
-  <div>
-    <%= submit "Change email" %>
+  <div class="uk-margin">
+    <%= submit "Change email", class: "uk-button" %>
   </div>
 </.form>
 
 <h3>Change password</h3>
 
-<.form let={f} for={@password_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_password">
+<.form let={f} for={@password_changeset} action={Routes.user_settings_path(@conn, :update)} id="update_password" class="uk-form-stacked">
   <%= if @password_changeset.action do %>
-    <div class="alert alert-danger">
+    <div class="uk-alert-danger" uk-alert>
       <p>Oops, something went wrong! Please check the errors below.</p>
     </div>
   <% end %>
 
   <%= hidden_input f, :action, name: "action", value: "update_password" %>
 
-  <%= label f, :password, "New password" %>
-  <%= password_input f, :password, required: true %>
-  <%= error_tag f, :password %>
+  <div class="uk-margin">
+    <%= label f, :password, "New password", class: "uk-form-label" %>
+    <%= password_input f, :password, required: true, class: "uk-form-controls uk-input" %>
+    <%= error_tag f, :password %>
+  </div>
 
-  <%= label f, :password_confirmation, "Confirm new password" %>
-  <%= password_input f, :password_confirmation, required: true %>
-  <%= error_tag f, :password_confirmation %>
+  <div class="uk-margin">
+    <%= label f, :password_confirmation, "Confirm new password", class: "uk-form-label" %>
+    <%= password_input f, :password_confirmation, required: true, class: "uk-form-controls uk-input" %>
+    <%= error_tag f, :password_confirmation %>
+  </div>
 
-  <%= label f, :current_password, for: "current_password_for_password" %>
-  <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_password" %>
-  <%= error_tag f, :current_password %>
+  <div class="uk-margin">
+    <%= label f, :current_password, for: "current_password_for_password", class: "uk-form-label" %>
+    <%= password_input f, :current_password, required: true, name: "current_password", id: "current_password_for_password", class: "uk-form-controls uk-input" %>
+    <%= error_tag f, :current_password %>
+  </div>
 
-  <div>
-    <%= submit "Change password" %>
+  <div class="uk-margin">
+    <%= submit "Change password", class: "uk-button" %>
   </div>
 </.form>
