Add to the source controller and fix some stuff

--- a/lib/loom_web/templates/layout/root.html.heex
+++ b/lib/loom_web/templates/layout/root.html.heex
@@ -17,7 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.10/dist/js/uikit-icons.min.js"></script>
   </head>
   <body>
-    <header>
+    <header class="uk-margin">
       <nav uk-navbar class="uk-navbar-container uk-container">
         <div class="uk-navbar-left">
           <%= link "Loom", to: Routes.page_path(@conn, :index), class: "uk-logo" %>
