--- a/lib/loom_web/templates/source/new.html.heex
+++ b/lib/loom_web/templates/source/new.html.heex
@@ -1,5 +1,5 @@
 <h1>New Source</h1>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.source_path(@conn, :create)) %>
+<%= render "form.html", Map.put(assigns, :action, Routes.team_source_path(@conn, :create, @team)) %>
 
-<span><%= link "Back", to: Routes.source_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.team_source_path(@conn, :index, @team) %></span>
